--- a/realizacje/style.css
+++ b/realizacje/style.css
@@ -155,16 +155,30 @@ body::-webkit-scrollbar-thumb:hover {
 .section-name h1{
     color: var(--main);
     font-size:41px;
+    opacity:0;
+    transition:opacity .3s ease-in-out;
 }
 .section-name-border{
     height:2px;
-    width:150%;
+    width:0%;
     background: linear-gradient(to right, #036969, #06BFBF, #036969);
     margin-top:8px;
+    transition:all .3s ease-in-out;
+}
+.section-name.active h1{
+    opacity:1;
+}
+.section-name.active .section-name-border{
+    width:150%;
 }
 .section-realization-content article{
     color:var(--white75);
     font-size:23px;
+    opacity:0;
+    transition:opacity .3s ease-in-out;
+}
+.section-realization-content.active article{
+    opacity:1;
 }
 .type-of-website{
     margin-top:128px;
@@ -177,6 +191,11 @@ body::-webkit-scrollbar-thumb:hover {
     text-shadow:1px 1px 2px black;
     background: linear-gradient(to right, var(--Dark-main),var(--Dark-main),var(--Dark-main), hsla(180, 61%, 50%,0.3),var(--main), hsla(180, 61%, 50%,0.3), var(--Dark-main),var(--Dark-main), var(--Dark-main));
     border-radius:100% 100% 100% 100%;
+    opacity:0;
+    transition:opacity .3s ease-in-out;
+}
+.type-of-website.active{
+    opacity:1;
 }
 .realizations-full{
     display: flex;
@@ -187,6 +206,11 @@ body::-webkit-scrollbar-thumb:hover {
 .realization-project{
     width:fit-content;
     margin-bottom:64px;
+    opacity:0;
+    transition: opacity .3s ease-in-out;
+}
+.realization-project.active{
+    opacity:1;
 }
 .realization-image{
     margin:0 auto;
